add problem for subtree, fixed edge cases